force-app/main/default/objects/TASKRAY__trBoardPowerFilter__c/TASKRAY__trBoardPowerFilter__c.object-meta.xml
<CustomObject>
    <label>TaskRay Board Power Filter</label>
    <nameField>
        <label>TaskRay Board Power Filter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TaskRay Board Power Filter</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>