force-app/main/default/objects/TASKRAY__trBoardPowerFilter__c/fields/TASKRAY__trTaskFilter__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trTaskFilter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Task Filter</label>
    <referenceTo>TASKRAY__trBoardFilter__c</referenceTo>
    <relationshipName>TaskRay_Task_Filter</relationshipName>
    <type>Lookup</type>
</CustomField>