force-app/main/default/objects/TASKRAY__trBoardPowerFilter__c/fields/TASKRAY__trTaskFilterString__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trTaskFilterString__c</fullName>
    <label>Task Filter (Default Only)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>