force-app/main/default/objects/TASKRAY__trBoardPowerFilter__c/fields/TASKRAY__trUser__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Power Filter for User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>TaskRay_Board_Power_Filter</relationshipName>
    <type>Lookup</type>
</CustomField>